--- a/src/main/webapp/index_template.xhtml
+++ b/src/main/webapp/index_template.xhtml
@@ -4,7 +4,7 @@
    xmlns:h="http://java.sun.com/jsf/html"
    xmlns:ui="http://java.sun.com/jsf/facelets">
 <h:head>
-   <title>School Passportisation</title>
+   <title>Extjs-MVC-REST-Java-Hibernate Application Template</title>
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
    
 	<!-- <x-compile> -->
@@ -12,7 +12,6 @@
             <link rel="stylesheet" href="bootstrap.css" />
             <script src="ext/ext-dev.js"></script>
             <!-- Include the translations -->
-    		<script type="text/javascript" src="ext/locale/ext-lang-sk.js"></script>
             <script src="bootstrap.js"></script>
         <!-- </x-bootstrap> -->
     	
