added info about the project; small layout fixes

--- a/src/main/webapp/index_template.xhtml
+++ b/src/main/webapp/index_template.xhtml
@@ -10,7 +10,7 @@
 	<!-- <x-compile> -->
         <!-- <x-bootstrap> -->
             <link rel="stylesheet" href="bootstrap.css" />
-            <script src="ext/ext-dev.js"></script>
+            <script src="ext/ext-all.js"></script>
             <!-- Include the translations -->
             <script src="bootstrap.js"></script>
         <!-- </x-bootstrap> -->
